--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.4.0",
     "mitt": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
